--- a/projects.html
+++ b/projects.html
@@ -9,5 +9,6 @@
       <li><a href="about.html">About</a></li>
       <li><a href="projects.html">Projects</a></li>
     </menu>
+    <h2>Project 1</h2>
   </body>
 </html>
